<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_language"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/language"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_account_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_account"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/account_info"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_support"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/support"
        android:textSize="18sp" />

</LinearLayout>