<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:background="@color/white"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_reminder_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="Vaccination"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_reminder_done"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="10:00"
                android:textAlignment="center"
                android:textSize="29sp" />

            <TextView
                android:id="@+id/tv_reminder_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="April 5, 2024"
                android:textAlignment="center"
                android:textSize="19sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_reminder_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_custom"
                android:text="@string/done" />

            <Button
                android:id="@+id/btn_reminder_snooze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/custom_register_button"
                android:text="@string/snooze" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>